--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -4,6 +4,16 @@ font-family: 'Open Sans', sans-serif;
 
 }
 
+h1, h2{
+   font-family: 'Caveat', cursive;
+
+
+}
+
+h2 {
+ font-size: 30px; 
+}
+
 a {
    color: #EF233C;
 }
