--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -14,6 +14,7 @@ h1, h2{
 
 h2 {
  font-size: 40px;
+ margin-top: 0;
 }
 
 a {
@@ -27,8 +28,8 @@ a:hover {
 
 .content-wrap{
   max-width: 950px;
-  margin 0 auto;
-  padding: 50px; 
+  margin: 0 auto;
+  padding: 50px;
 }
 
 
