--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -3,6 +3,7 @@
 body {
 
 font-family: 'Open Sans', sans-serif;
+margin: 0;
 
 }
 
@@ -32,13 +33,14 @@ a:hover {
   padding: 50px;
 }
 
-
+/* Header and Footer*/
 header, footer {
   background: #2B2D42;
   color: #8D99AE;
 
 }
 
+/* header*/
 header h1, header h2 {
   color: #EDF2F4;
 
