--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -41,6 +41,11 @@ header, footer {
 }
 
 /* header*/
+.profile-img{
+  width: 300px;
+  border-radius: 50%;
+
+}
 header h1, header h2 {
   color: #EDF2F4;
 
@@ -56,7 +61,7 @@ footer {
 .contact-info a {
   background: white;
   padding: 10px;
-  display: inline-block; 
+  display: inline-block;
 
 }
 
