--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -31,6 +31,7 @@ a:hover {
   max-width: 950px;
   margin: 0 auto;
   padding: 50px;
+  overflow: auto; 
 }
 
 /* Header and Footer*/
@@ -44,11 +45,18 @@ header, footer {
 .profile-img{
   width: 300px;
   border-radius: 50%;
+  float: left;
 
 }
 header h1, header h2 {
   color: #EDF2F4;
+  margin: 0;
 
+
+}
+
+header {
+  text-align: center;
 
 }
 
