--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -36,6 +36,7 @@ a:hover {
 
 .col-narrow {
   width: 30%;
+  float: left; 
 }
 
 .col-wide {
@@ -53,7 +54,7 @@ header, footer {
 .profile-img{
 
   border-radius: 50%;
-  
+
 
 }
 header h1, header h2 {
