--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -37,12 +37,13 @@ a:hover {
 .col-narrow {
   width: 30%;
   float: left;
+  min-height: 175px; 
 }
 
 .col-wide {
    width: 70%;
    float: left;
-   padding-left: 20px; 
+   padding-left: 20px;
 }
 
 /* Header and Footer*/
