--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -96,13 +96,14 @@ footer {
 
 nav {
    text-align: center;
+   background: white;
 }
 
 nav a {
  display: inline-block;
  padding: 15px 20px;
  text-decoration: none;
- text-transform: uppercase; 
+ text-transform: uppercase;
 }
 /* Work Experience
 ----------------*/
