--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -97,6 +97,11 @@ footer {
 nav {
    text-align: center;
    background: white;
+   position: fixed;
+   top: 0;
+   width: 100%;
+   left: 0;
+   right: 0; 
 }
 
 nav a {
