--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -77,7 +77,7 @@ header h1, header h2 {
 }
 
 header {
-  text-align: center;
+  padding-top: 50px; 
 
 }
 
@@ -101,7 +101,7 @@ nav {
    top: 0;
    width: 100%;
    left: 0;
-   right: 0; 
+   right: 0;
 }
 
 nav a {
