--- a/css-resume/css/styles.css
+++ b/css-resume/css/styles.css
@@ -59,7 +59,9 @@ a:hover {
 
   text-decoration: none;
   background: #EF233C;
-  color: white; 
+  color: white;
+  padding: 10px;
+  display: inline-block;
 }
 
 /* Header and Footer*/
